--- a/apps/login/templates/register.html
+++ b/apps/login/templates/register.html
@@ -21,6 +21,12 @@
         <input type="text" name="name" placeholder="Your Name...">
     </div>
 </div>
+<div class="field">
+    <div class="ui left icon labeled input">
+        <div class="ui label"><i class="calendar icon"></i>Date Hired </div>
+        <input type="date" name="date_hired" placeholder="Date Hired">
+    </div>
+</div>
 {% endblock %}
 {% block submitbtn %}Register{% endblock %}
 
